# travel-companion

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TASK.md  flake.nix  project.yml
Sources/App/: AppDelegate.swift  ExperimentCoordinator.swift  Info.plist  TravelCompanion.entitlements  TravelCompanionApp.swift
Sources/Calls/: AudioCallEngine.swift  OfflineCallManager.swift
Sources/Diagnostics/: ResourceTransferStore.swift  ValidationEventStore.swift
Sources/Domain/: ExperimentModels.swift  ProtocolModels.swift
Sources/Features/: DiagnosticsRootView.swift  PairingViews.swift
Sources/Location/: LocationExperimentEngine.swift
Sources/Nearby/: NearbyInteractionExperiment.swift
Sources/Transport/: BluetoothControlPlane.swift  WiFiAwareExperiment.swift
Tests/: BLEControlCodecTests.swift  PersistenceTests.swift
TravelCompanion.xcodeproj/: project.pbxproj
TravelCompanion.xcodeproj/xcshareddata/xcschemes/: TravelCompanion.xcscheme
app-ios/TravelCompanion/App/: AppDelegate.swift  Info.plist  TravelCompanionApp.swift
app-ios/TravelCompanion/Core/: AppleCapabilityRuntime.swift  CoreModels.swift  TravelCompanion-Bridging-Header.h  TravelCore.swift
app-ios/TravelCompanion/Design/: TCDesign.swift  TCPeerVisuals.swift  TCStatusViews.swift
app-ios/TravelCompanion/Features/: AppShell.swift
app-ios/TravelCompanion/Features/Chat/: ConversationListView.swift  ConversationView.swift  MediaCapture.swift
app-ios/TravelCompanion/Features/Document/: DocumentConflictSheet.swift  DocumentEditorView.swift  DocumentView.swift
app-ios/TravelCompanion/Features/Places/: PlaceDetailView.swift  PlaceEditorSheet.swift  PlaceListView.swift  PlacesMapView.swift
app-ios/TravelCompanionTests/: CoreModelsTests.swift
bindings/app-ffi/: Cargo.toml
bindings/app-ffi/src/: lib.rs  uniffi_api.rs
bindings/tc-app-ffi/: Cargo.toml
bindings/tc-app-ffi/include/: tc_app_ffi.h
bindings/tc-app-ffi/src/: lib.rs  uniffi_api.rs
crates/call/: Cargo.toml
crates/call/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/document/: Cargo.toml
crates/document/src/: lib.rs
crates/group-auth/: Cargo.toml
crates/group-auth/src/: lib.rs
crates/im/: Cargo.toml
crates/im/src/: lib.rs
crates/location-logic/: Cargo.toml
crates/location-logic/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs
crates/resources/: Cargo.toml
crates/resources/src/: disk.rs  lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tc-call/: Cargo.toml
crates/tc-call/src/: lib.rs
crates/tc-core/: Cargo.toml
crates/tc-core/src/: lib.rs
crates/tc-crypto/: Cargo.toml
crates/tc-document/: Cargo.toml
crates/tc-document/src/: lib.rs
crates/tc-group-auth/: Cargo.toml
crates/tc-group-auth/src/: lib.rs
crates/tc-im/: Cargo.toml
crates/tc-im/src/: lib.rs
crates/tc-location-logic/: Cargo.toml
crates/tc-location-logic/src/: lib.rs
crates/tc-model/: Cargo.toml
crates/tc-protocol/: Cargo.toml
crates/tc-protocol/src/: lib.rs
crates/tc-replication/: Cargo.toml
crates/tc-replication/src/: lib.rs
crates/tc-resources/: Cargo.toml
crates/tc-resources/src/: disk.rs  lib.rs
crates/tc-store/: Cargo.toml
crates/tc-store/src/: lib.rs
crates/travel-core/: Cargo.toml
crates/travel-core/src/: lib.rs  logging.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_STATUS.md
modules/bluetooth/: Cargo.toml  Package.swift
modules/bluetooth/apple/: README.md
modules/bluetooth/apple/Sources/BluetoothApple/: BluetoothApple.swift
modules/bluetooth/src/: ffi.rs  lib.rs
modules/call-system/: Cargo.toml  Package.swift
modules/call-system/apple/: README.md
modules/call-system/src/: ffi.rs  lib.rs
modules/location/: Cargo.toml  Package.swift
modules/location/apple/: README.md
modules/location/src/: ffi.rs  lib.rs
modules/notifications/: Cargo.toml  Package.swift
modules/notifications/apple/: README.md
modules/notifications/src/: ffi.rs  lib.rs
modules/peer-transport/: Cargo.toml  Package.swift
modules/peer-transport/apple/: README.md
modules/peer-transport/apple/Sources/PeerTransportApple/: PeerTransportApple.swift
modules/peer-transport/src/: ffi.rs  lib.rs
modules/ranging/: Cargo.toml  Package.swift
modules/ranging/apple/: README.md
modules/ranging/src/: ffi.rs  lib.rs
modules/secure-storage/: Cargo.toml  Package.swift
modules/secure-storage/apple/: README.md
modules/secure-storage/src/: ffi.rs  lib.rs
modules/tc-bluetooth/: Cargo.toml  Package.swift
modules/tc-bluetooth/apple/: README.md
modules/tc-bluetooth/src/: ffi.rs  lib.rs
modules/tc-call-system/: Cargo.toml  Package.swift
modules/tc-call-system/apple/: README.md
modules/tc-call-system/src/: ffi.rs  lib.rs
modules/tc-location/: Cargo.toml  Package.swift
modules/tc-location/apple/: README.md
modules/tc-location/src/: ffi.rs  lib.rs
modules/tc-notifications/: Cargo.toml  Package.swift
modules/tc-notifications/apple/: README.md
modules/tc-notifications/src/: ffi.rs  lib.rs
modules/tc-peer-transport/: Cargo.toml  Package.swift
modules/tc-peer-transport/apple/: README.md
modules/tc-peer-transport/apple/Sources/TcPeerTransportApple/: TcPeerTransportApple.swift
modules/tc-peer-transport/apple/include/: tc_peer_transport_apple.h
modules/tc-peer-transport/src/: ffi.rs  lib.rs
modules/tc-ranging/: Cargo.toml  Package.swift
modules/tc-ranging/apple/: README.md
modules/tc-ranging/src/: ffi.rs  lib.rs
modules/tc-secure-storage/: Cargo.toml  Package.swift
modules/tc-secure-storage/apple/: README.md
modules/tc-secure-storage/src/: ffi.rs  lib.rs
prototypes/ios-validation-lab/: README.md
prototypes/ios-validation-lab/Tests/: ExperimentModelsTests.swift
prototypes/ios-validation-lab/TravelCompanion.xcodeproj/: project.pbxproj
scripts/: build-rust-ios.sh  check.sh  generate-uniffi-swift.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+29 files in other folders)
