[workspace]
resolver = "2"
members = [
  "crates/model",
  "crates/crypto",
  "crates/group-auth",
  "crates/protocol",
  "crates/store",
  "crates/replication",
  "crates/resources",
  "crates/location-logic",
  "crates/im",
  "crates/document",
  "crates/call",
  "crates/travel-core",
  "modules/bluetooth",
  "modules/peer-transport",
  "modules/location",
  "modules/ranging",
  "modules/notifications",
  "modules/call-system",
  "modules/secure-storage",
  "bindings/app-ffi",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.87"

[workspace.dependencies]
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hkdf = "0.12"
hmac = "0.12"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = { version = "0.14.8", default-features = false, features = ["crypto", "ring"] }
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spake2 = "0.4"
tempfile = "3"
thiserror = "2"
uniffi = "=0.32.0"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
