[package]
name = "tc-app-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tc-core = { path = "../../crates/tc-core" }
tc-location-logic = { path = "../../crates/tc-location-logic" }
tc-model = { path = "../../crates/tc-model" }

[dev-dependencies]
tempfile.workspace = true
