[package]
name = "group-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hkdf.workspace = true
serde.workspace = true
sha2.workspace = true
spake2.workspace = true
thiserror.workspace = true
crypto = { path = "../crypto" }
model = { path = "../model" }
zeroize.workspace = true

