[package]
name = "replication"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crypto = { path = "../crypto" }
model = { path = "../model" }
store = { path = "../store" }

