[package]
name = "tc-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

