[package]
name = "tc-group-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hkdf.workspace = true
serde.workspace = true
sha2.workspace = true
spake2.workspace = true
thiserror.workspace = true
tc-crypto = { path = "../tc-crypto" }
tc-model = { path = "../tc-model" }
zeroize.workspace = true

