[package]
name = "tc-replication"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tc-crypto = { path = "../tc-crypto" }
tc-model = { path = "../tc-model" }
tc-store = { path = "../tc-store" }

