[package]
name = "tc-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tc-model = { path = "../tc-model" }

[dev-dependencies]
tempfile.workspace = true
