[package]
name = "bluetooth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
model = { path = "../../crates/model" }
protocol = { path = "../../crates/protocol" }
thiserror.workspace = true
tracing.workspace = true
uniffi.workspace = true
