[package]
name = "tc-peer-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hmac.workspace = true
serde.workspace = true
sha2.workspace = true
tc-model = { path = "../../crates/tc-model" }
thiserror.workspace = true
uniffi.workspace = true
uuid.workspace = true
